changed the font in links in header, trying to fix the alignment of image in home video, rearranged images of paintings

--- a/layouts/style.css
+++ b/layouts/style.css
@@ -35,6 +35,11 @@ body {
   src: url('/assets/fonts/SofiaSans-Regular.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'TrajanPro3';
+  src: url('/assets/fonts/TrajanPro3-Regular.otf') format('truetype');
+}
+
 body.page-is-transitioning #page-content {
   opacity: 0;
 }
@@ -71,7 +76,6 @@ h1,
 h2,
 h3,
 h4 {
-  text-transform: uppercase;
   font-family: "Lora", serif  !important;
   color: #07111c;
   text-align: center;
@@ -107,7 +111,7 @@ h4 {
 h1 {
   margin: 0;
   text-transform: capitalize;
-  font-weight: 500 !important;
+  font-weight: 400 !important;
   font-size: 50px;
   line-height: 70px;
   letter-spacing: 0.5px;
@@ -137,10 +141,10 @@ h1 {
 }
 
 h2 {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 2.2rem;
   margin: 0px 0px 60px 0px;
-  letter-spacing: -0.02rem;
+  letter-spacing: 0rem;
   line-height: 3.3rem;
 }
 
